--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -61,10 +61,10 @@
     <hr class="section-line">
 
     <footer class="footer">
-        <div class="footer-col1"><img src="images/logo2mini.png" alt=""></div>
-        <div class="footer-col2">col2</div>
-        <div class="footer-col3">col3</div>
-        <div class="footer-col4">col4</div>
+        <div class="footer-col1"><img src="images/logotst.png" alt=""></div>
+        <div class="footer-col2"></div>
+        <div class="footer-col3"></div>
+        <div class="footer-col4"></div>
 
     </footer>
 
