--- a/src/main/resources/templates/organisation_profile.html
+++ b/src/main/resources/templates/organisation_profile.html
@@ -61,6 +61,8 @@
 
             
 
+            
+
         </section>
         
 
@@ -86,89 +88,99 @@
         
         async function getOrganisationData() {
 
-            const profileData = [
-                "organisation-name",
-                "organisation-type",
-                "fname-lname", 
-                "email", 
-                "phone-number", 
-                "adress", 
-                "krs-number",
-            ]
+                const profileData = [
+                    "name",
+                    "type",
+                    "fnameAndlname", 
+                    "email", 
+                    "phone", 
+                    "adress", 
+                    "krsNumber",
+                ]
 
-            const headlines = [
-                "Imię i nazwisko właściciela",
-                "Email",
-                "Nr telefonu",
-                "Adres",
-                "Numer KRS"
-            ]
+                const headlines = [
+                    "Imię i nazwisko właściciela",
+                    "Email",
+                    "Nr telefonu",
+                    "Adres",
+                    "Numer KRS"
+                ]
 
-            try {
-                const response = await fetch('http://localhost:8080/api/organisation/', {
-                    method: 'GET',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                });
+                try {
+                    const response = await fetch('http://localhost:8080/api/organisation/', {
+                        method: 'GET',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                    });
 
-                if (response.ok) {
-                    const result = await response.json();
-                    console.log(result);
-                    let i = 0;
-                    let j = 0;
-                    
-                    for (const x in result) {
+                    if (response.ok) {
+                        const result = await response.json();
+                        console.log(result);
+                        let i = 0;
+                        let j = 0;
+                        
+                        for (const x in result) {
 
-                        if (i === 0) {
+                            if (i > 6 ) {
+                                break;
+                            }
+
+                            if (i === 0) {
+
+                                const h2El = document.createElement("h2");
+                                h2El.classList.add(profileData[i]);
+                                h2El.innerHTML = result[profileData[i]];
+
+                                rootHeader.appendChild(h2El);
+
+                                i = i + 1;
+
+                                if (i > 7)
+                                {
+                                break;
+                                }
+
+                                continue;
+                            }
+
+                            if (i === 1) {
+
+                                const h4El = document.createElement("h4");
+                                h4El.classList.add(profileData[i]);
+                                h4El.innerHTML = result[profileData[i]];
+
+                                rootHeader.appendChild(h4El);
+
+                                i = i + 1;
+                                continue;
+                            }
+                            
+                            const divEl = document.createElement("div");
+                            divEl.classList.add(profileData[i]);
 
                             const h2El = document.createElement("h2");
-                            h2El.classList.add(profileData[i]);
-                            h2El.innerHTML = result[x];
-
-                            rootHeader.appendChild(h2El);
-
-                            i = i + 1;
-                            continue;
-                        }
-
-                        if (i === 1) {
+                            h2El.innerHTML = headlines[j];
 
                             const h4El = document.createElement("h4");
-                            h4El.classList.add(profileData[i]);
-                            h4El.innerHTML = result[x];
+                            h4El.innerHTML = result[profileData[i]];
 
-                            rootHeader.appendChild(h4El);
+                            divEl.appendChild(h2El);
+                            divEl.appendChild(h4El);
+                            root.appendChild(divEl);
 
                             i = i + 1;
-                            continue;
+                            j = j + 1;
                         }
-                        
-                        const divEl = document.createElement("div");
-                        divEl.classList.add(profileData[i]);
 
-                        const h2El = document.createElement("h2");
-                        h2El.innerHTML = headlines[j];
 
-                        const h4El = document.createElement("h4");
-                        h4El.innerHTML = result[x];
-
-                        divEl.appendChild(h2El);
-                        divEl.appendChild(h4El);
-                        root.appendChild(divEl);
-
-                        i = i + 1;
-                        j = j + 1;
+                    } else {
+                        console.log('Blad odpowiedzi serwera', response.body);
                     }
 
-
-                } else {
-                    console.log('Blad odpowiedzi serwera', response.body);
+                } catch (error) {
+                    console.error('Error', error);
                 }
-
-            } catch (error) {
-                console.error('Error', error);
-            }
 
         }
 
