--- a/src/main/resources/templates/organisation_profile_edit.html
+++ b/src/main/resources/templates/organisation_profile_edit.html
@@ -64,9 +64,9 @@
     <footer class="footer">
 
         <div class="footer-col1"><img src="images/logo2mini.png" alt=""></div>
-        <div class="footer-col2">col2</div>
-        <div class="footer-col3">col3</div>
-        <div class="footer-col4">col4</div>
+        <div class="footer-col2"></div>
+        <div class="footer-col3"></div>
+        <div class="footer-col4"></div>
 
     </footer>
 
