--- a/src/main/resources/templates/volunteer_home.html
+++ b/src/main/resources/templates/volunteer_home.html
@@ -57,9 +57,9 @@
     <footer class="footer">
 
         <div class="footer-col1"><img src="/images/logotst.png" alt=""></div>
-        <div class="footer-col2">col2</div>
-        <div class="footer-col3">col3</div>
-        <div class="footer-col4">col4</div>
+        <div class="footer-col2"></div>
+        <div class="footer-col3"></div>
+        <div class="footer-col4"></div>
 
     </footer>
 
