--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,10 +17,9 @@
 
         <nav class="nav-menu">
             <div class="nav-links-container">
-                <a href="" class="nav-link">O nas</a>
-                <a href="" class="nav-link">Projekty</a>
-                <a href="" class="nav-link">Organizacje</a>
-                <a href="" class="nav-link">Kontakt</a>
+                <a href="/home" class="nav-link">O nas</a>
+                <a href="/organisations" class="nav-link">Organizacje</a>
+                <a href="/contact" class="nav-link">Kontakt</a>
             </div>
             <div class="sign-in-up-buttons">
                 <a href="/login" class="nav-link">Logowanie</a>
@@ -73,7 +72,7 @@
 
     <footer class="footer">
 
-        <div class="footer-col1"><img src="images/logo2mini.png" alt=""></div>
+        <div class="footer-col1"><img src="images/logotst.png" alt=""></div>
         <div class="footer-col2">col2</div>
         <div class="footer-col3">col3</div>
         <div class="footer-col4">col4</div>
